# Analizzatore-Audio

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StreamingTargets.h  UpdateChecker.cpp  UpdateChecker.h  Version.h
Source/Analyzer/: LufsMeter.cpp  LufsMeter.h  Snapshot.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TruePeakDetector.cpp  TruePeakDetector.h
Source/DSP/: TruePeakLimiter.cpp  TruePeakLimiter.h
Source/GUI/: ABPanel.cpp  ABPanel.h  HelpBadge.h  MetersPanel.cpp  MetersPanel.h  SpectrumPanel.cpp  SpectrumPanel.h  TargetPanel.cpp  TargetPanel.h  Theme.h
